# BMSBattery_S_controllers_firmware

./: .gitignore  ACAcommons.c  ACAcommons.h  ACAcontrollerState.c  ACAcontrollerState.h  ACAsetPoint.c  BOdisplay.c  CMakeLists.txt  Makefile_windows  bootstrap_win.py  config.h  display.c  eeprom.c  eeprom.h  main.c  main.h  motor.c  pwm.c  update_setpoint.c  update_setpoint.h
Configurator/: configurator.py
experimental settings/: 20180904-172756MESZ.ini  20180904-173108MESZ.ini
proven settings/: 20180904-132022MESZ.ini
tools/JavaConfigurator/: .project
